Changes in version 0.1.2.7-alpha - 2007-??-??
 o Major bugfixes:
    - Fix a crash bug in the presence of DNS hijacking  (reported by Andrew
      Del Vecchio).

 o Minor bugfixes:
    - When computing clock skew from directory HTTP headers, consider what
      time it was when we finished asking for the directory, not what time it
      is now.
    - Add some defensive programming to eventdns.c in an attempt to catch
      possible memory-stomping bugs.
    - Previously, we would cache up to 16 old networkstatus documents
      indefinitely, if they came from nontrusted authorities.  Now we
      discard them if they are more than 10 days old.
    - Fix crash with "tor --list-fingerprint" (reported by seeess).


Changes in version 0.1.2.6-alpha - 2007-01-09
  o Major bugfixes:
    - Fix an assert error introduced in 0.1.2.5-alpha: if a single TLS
      connection handles more than 4 gigs in either direction, we crash.
    - Fix an assert error introduced in 0.1.2.5-alpha: if we're an
      advertised exit node, somebody might try to exit from us when
      we're bootstrapping and before we've built your descriptor yet.
      Refuse the connection rather than crashing.

  o Minor bugfixes:
    - Warn if we (as a server) find that we've resolved an address that we
      weren't planning to resolve.
    - Warn that using select() on any libevent version before 1.1 will be
      unnecessarily slow (even for select()).
    - Flush ERR-level controller status events just like we currently
      flush ERR-level log events, so that a Tor shutdown doesn't prevent
      the controller from learning about current events.

  o Minor features (more controller status events):
    - Implement EXTERNAL_ADDRESS server status event so controllers can
      learn when our address changes.
    - Implement BAD_SERVER_DESCRIPTOR server status event so controllers
      can learn when directories reject our descriptor.