@@ -1,4 +1,10 @@
 Changes in version 0.1.2.7-alpha - 2007-??-??
+
+ o Minor features:
+    - Check for addresses with invalid characters at the exit as well as at
+      the client, and warn less verbosely when they fail.  You can override
+      this by setting ServerDNSAllowNonRFC953Addresses to 1.
+
  o Major bugfixes:
     - Fix a crash bug in the presence of DNS hijacking  (reported by Andrew
       Del Vecchio).
